--- a/package.json
+++ b/package.json
@@ -2,23 +2,24 @@
   "name": "app",
   "private": true,
   "dependencies": {
-    "@hotwired/stimulus": "^3.2.2",
-    "@hotwired/turbo-rails": "^8.0.4",
+    "@hotwired/stimulus": "3.2.2",
+    "@hotwired/turbo-rails": "8.0.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "autoprefixer": "^10.4.19",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "esbuild": "^0.23.0",
-    "lucide-react": "^0.406.0",
-    "postcss": "^8.4.39",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss": "^3.4.4"
+    "@radix-ui/react-slot": "1.0.2",
+    "autoprefixer": "10.4.13",
+    "class-variance-authority": "0.7.0",
+    "clsx": "1.2.1",
+    "cmdk": "0.2.0",
+    "esbuild": "0.23.0",
+    "lucide-react": "0.407.0",
+    "postcss": "8.4.39",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.10.0",
+    "tailwind-merge": "1.14.0",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "1.0.7"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
