--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@floating-ui/dom": "^1.6.7",
     "@hotwired/stimulus": "3.2.2",
     "@hotwired/turbo-rails": "8.0.4",
     "@radix-ui/react-dialog": "1.1.1",
