--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@hotwired/turbo-rails": "8.0.4",
     "@radix-ui/react-dialog": "1.1.1",
     "@radix-ui/react-popover": "1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "autoprefixer": "10.4.13",
